     (Bug #1030343, Jared Silva, Jelmer Vernooij)
 * qconfig:
   * Fix: Fails to modify or remove merge tool configuration. (Bug #1045827)
 * qlog:
   * Support for FusionForge bug tracker. (Jérémy Subtil, Bug #1072044)
   * Support for Jira bug tracker. (Craig Hewetson, Bug #1189421)
   * Support for Flyspray bug tracker URLs (2 styles). (Alexander Belchenko)


0.23.0 "Birch" - 2012/07/12
---------------------------
What's new in this release:

QBzr 0.23 is companion release for bzr 2.6, and compatible with bzr 2.5.

Behavior change: External diff behavior is changed as below.(IWATA Hidetaka)
 1. When calling external diff for multiple files, all diffs shown at once.(Bug #942218)
 2. Working tree or branch is locked only when starting up of diff tools.(Bug #942221)
This affects to all commands which use external diff. 
(qdiff, qcommit, qbrowse, qannotate, ...)

Now, you can launch 'Shelve' directly from each dialog when uncommitted change blocks action.
And you can launch 'Resolve' directly when conflicts generated. (IWATA Hidetaka #935903)

New feature of qannotate command: command-line option `--line=N` (`-L`) 
allows you to jump right to specific line. 
That could be used for tighter integration with editors and IDEs.

Annotation window now uses e-mail of revision author to define background 
color of revision. Previously we've used author name to define background 
color, so changes in different revisions made by user with the same e-mail 
but with differently spelled name was highlighted with different colors.

Simple actions to resolve conflicts: 'take "THIS"' and 'take "OTHER"'.
Available from context menu.

Show simple message box instead of exception report dialog when failing to lock. (#935902)

Improvements of qlog's context menus: better context menu of deleted files,
and for files from virtual "Working Tree" revision (available when
qlog run with --show-tree option). Also properly refresh the state of changes
in virtual "Working Tree" revision.
