@@ -14,6 +14,8 @@ Maintenance release.
    * Support for FusionForge bug tracker. (Jérémy Subtil, Bug #1072044)
    * Support for Jira bug tracker. (Craig Hewetson, Bug #1189421)
    * Support for Flyspray bug tracker URLs (2 styles). (Alexander Belchenko)
+   * Hack for Vista/Win7 aero style: selected rows should use black text
+     color. (Alexander Belchenko)
 
 
 0.23.0 "Birch" - 2012/07/12
